fixing border width on mobile with new div

--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -70,9 +70,8 @@ a {
 
 @media only screen and (max-width: 768px) {
 
-  html {
+  .borderdiv {
     border-width: 12px;
-    height: 100%;
   }
   
   .appContainer {
